2005-10-18  Andreas Kupries <andreask@activestate.com>

	* rc4.bench: Extended with benchmarks for the keyschedule.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rc4c.tcl: Fixed to permit compilation with msvc and gcc.

2005-09-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rc4.tcl:  Frink error suppression.
	* rc4.man:  Added documentation for the programming api.

2005-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rc4.tcl: Ensure all implementations available are tested. Added
	* rc4.man: improved hypen handling. '--' is an optional end-of-options
	* pkgIndex.tcl:	marker.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* rc4.test: Fixed x-version problems of the testsuite. The tests
	  wrongly used the tcltest::wrongNumArgs command. In this case the
	  error message is generated by the proc code and the same across
	  all versions of Tcl.

2004-07-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rc4.test: Added basic command tests.
	* rc4c.tcl: Critcl implementation.
	* rc4.tcl:  Support critcl implementation.

	* rc4.tcl:  Storing the state as a list and using lset is faster
	than using an array provided we have a built-in lset
	command. Added both versions and switch appropriately to get the
	fastest implementation for the tcl version. Tested 8.2 - 8.5.

2004-07-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rc4.tcl:  Pure tcl implementation of the Alledged RC4 stream cipher.
	* rc4.test: Some published test vectors for RC4.
	* rc4.man:  Documentation.